[gd_scene load_steps=15 format=3 uid="uid://pph4ndujwtbk"]

[ext_resource type="PackedScene" uid="uid://bowcmya00mvsq" path="res://Scenes/pause_menu.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://cj63f0dlucbmw" path="res://Scenes/in_game.tscn" id="2_5u1uf"]
[ext_resource type="FontFile" uid="uid://c2motn82nttuu" path="res://Font/Movement.ttf" id="5"]
[ext_resource type="PackedScene" uid="uid://dmbwnii5hqwja" path="res://Scenes/fader.tscn" id="6"]
[ext_resource type="Script" uid="uid://dj5fh83outgpq" path="res://Scripts/game.tres.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://uqu2t6hugyy0" path="res://Bosse/BossHP.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://dbokg7m3bstbv" path="res://Npcs/Scenes/textbox.tscn" id="12_k2rrv"]
[ext_resource type="FontFile" uid="uid://cw2id6iw1l6oa" path="res://Font/Lemon Days.ttf" id="15"]

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("5")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/25/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/25/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("5")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/25/0 = Vector2(0, 0)
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/25/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/25/0/kerning_overrides/25/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("15")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)

[sub_resource type="Animation" id="8"]
length = 4.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player2Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Player1Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_7cw4a"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h5g3y"]
_data = {
&"PlayerCanRespawn": SubResource("8"),
&"RESET": SubResource("Animation_7cw4a")
}

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("7")

[node name="InGame" parent="." instance=ExtResource("2_5u1uf")]

[node name="Fader" parent="." instance=ExtResource("6")]
layout_mode = 0

[node name="Player2Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 748.0
offset_top = 8.0
offset_right = 1010.0
offset_bottom = 34.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 25
text = "Player 2 can respawn"

[node name="Player1Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 270.0
offset_bottom = 34.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("4")
theme_override_font_sizes/font_size = 25
text = "Player 1 can respawn"

[node name="Boss" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="BossHP" parent="Boss" instance=ExtResource("11")]
layout_mode = 0
offset_left = 112.0
offset_top = 536.0
offset_right = 132.0
offset_bottom = 540.0
scale = Vector2(40, 3)

[node name="Label" type="Label" parent="Boss"]
layout_mode = 0
offset_left = 152.0
offset_top = 507.0
offset_right = 283.0
offset_bottom = 534.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = SubResource("7")
theme_override_font_sizes/font_size = 20
text = "Boss Galaga"

[node name="TextBox" parent="." instance=ExtResource("12_k2rrv")]

[node name="pause" parent="." instance=ExtResource("1")]

[node name="respawnTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h5g3y")
}

[connection signal="timeout" from="respawnTimer" to="." method="_on_respawnTimer_timeout"]
